--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <div id="app"></div>
+    <div id="chat">
+        <div id="chat-messages"></div>
+        <input type="text" id="chat-input" />
+    </div>
     <script type="module" src="src/main.js"></script>
 </body>
 
